# serializer version: 1
# name: test_all_entities[button.kitchen_shelfy_mark_filter_as_changed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.kitchen_shelfy_mark_filter_as_changed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mark filter as changed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Mark filter as changed',
    'platform': 'vitesy',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filter_changed',
    'unique_id': '80:65:99:34:F9:B4_filter_changed',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.kitchen_shelfy_mark_filter_as_changed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen Shelfy Mark filter as changed',
    }),
    'context': <ANY>,
    'entity_id': 'button.kitchen_shelfy_mark_filter_as_changed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.kitchen_shelfy_mark_fridge_as_cleaned-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.kitchen_shelfy_mark_fridge_as_cleaned',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mark fridge as cleaned',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Mark fridge as cleaned',
    'platform': 'vitesy',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fridge_cleaned',
    'unique_id': '80:65:99:34:F9:B4_fridge_cleaned',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.kitchen_shelfy_mark_fridge_as_cleaned-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen Shelfy Mark fridge as cleaned',
    }),
    'context': <ANY>,
    'entity_id': 'button.kitchen_shelfy_mark_fridge_as_cleaned',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
